--- a/ViewController/public_html/create/whodWizardSearch.jspx
+++ b/ViewController/public_html/create/whodWizardSearch.jspx
@@ -30,7 +30,7 @@
                                                                     valueChangeListener="#{pageFlowScope.WhodWizardSearchBean.dictionaryChange}"
                                                                     value="#{pageFlowScope.WhodWizardBean.currentDictionary}"
                                                                     labelStyle="white-space:nowrap"
-                                                                    valuePassThru="true" readOnly="true">
+                                                                    valuePassThru="true" readOnly="false">
                                                     <f:selectItems value="#{pageFlowScope.WhodWizardBean.whodDictinoriesSI}"
                                                                    id="si30"/>
                                                 </af:selectOneChoice>
@@ -39,10 +39,22 @@
                                                                     labelStyle="white-space:nowrap" valuePassThru="true"
                                                                     autoSubmit="true" helpTopicId="NMAT_HELP_QUERY_TYPE"
                                                                     value="#{pageFlowScope.WhodWizardSearchBean.paramExtension}"
-                                                                    valueChangeListener="#{pageFlowScope.WhodWizardSearchBean.extensionChanged}">
+                                                                    valueChangeListener="#{pageFlowScope.WhodWizardSearchBean.extensionChanged}"
+                                                                    rendered="#{pageFlowScope.setMode eq 'update' or pageFlowScope.setMode eq 'create'}">
                                                     <f:selectItems value="#{pageFlowScope.WhodWizardBean.whodExtensionSI}"
                                                                    id="si31"/>
                                                     <af:selectItem id="si301" label="ALL" value="%"/>
+                                                </af:selectOneChoice>
+                                                <af:selectOneChoice label="Level Group" id="soc61"
+                                                                    labelStyle="white-space:nowrap" valuePassThru="true"
+                                                                    autoSubmit="true" helpTopicId="NMAT_HELP_QUERY_TYPE"
+                                                                    value="#{pageFlowScope.WhodWizardSearchBean.paramLevelGroup}"
+                                                                    rendered="#{!(pageFlowScope.setMode eq 'update' or pageFlowScope.setMode eq 'create')}"
+                                                                    partialTriggers="soc2">
+                                                    <f:selectItems value="#{pageFlowScope.WhodWizardSearchBean.whodLevelGroupSI}"
+                                                                   id="si311"/>
+                                                    <af:selectItem id="si3011" label="ALL" value="%"
+                                                                   rendered="#{pageFlowScope.WhodWizardBean.currentDictionary ne 'UMCWHO2'}"/>
                                                 </af:selectOneChoice>
                                                 <af:selectOneChoice label="Release Group" id="smc4"
                                                                     value="#{pageFlowScope.WhodWizardSearchBean.paramReleaseGroup}"
@@ -75,9 +87,15 @@
                                                 <af:selectOneChoice label="Level" id="soc1" autoSubmit="true"
                                                                     value="#{pageFlowScope.WhodWizardSearchBean.paramLevel}"
                                                                     labelStyle="white-space:nowrap"
-                                                                    valuePassThru="true">
+                                                                    valuePassThru="true" partialTriggers="soc61">
                                                     <af:selectItem label="1" value="1" id="si20"/>
                                                     <af:selectItem label="2" value="2" id="si36"/>
+                                                    <af:selectItem label="3" value="3" id="si361"
+                                                                   rendered="#{pageFlowScope.WhodWizardSearchBean.paramLevelGroup eq 'ATC'}"/>
+                                                    <af:selectItem label="4" value="4" id="si362"
+                                                                   rendered="#{pageFlowScope.WhodWizardSearchBean.paramLevelGroup eq 'ATC'}"/>
+                                                    <af:selectItem label="5" value="5" id="si3623"
+                                                                   rendered="#{pageFlowScope.WhodWizardSearchBean.paramLevelGroup eq 'ATC'}"/>
                                                     <af:selectItem label="All Levels" value="%" id="si28"/>
                                                 </af:selectOneChoice>
                                             </af:panelFormLayout>
